--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <!-- This is a test line to see if jenkins will be triggered. -->
-  
+  <!-- Test -->
   <!--  See http://maven.apache.org/pom.html for a full description of all supported values -->
 
   <!-- GroupID - identifies WHO is making the project -->
